<resources>
    <!--A-->
    <string name="app_name">#Nosso19</string>
    <string name="apps_need_maps">Instale o Google Maps ou algum navegador para poder visualizar a rota!</string>

    <!--C-->
    <string name="church_description">Cerimônia Religiosa</string>
    <string name="church">Igreja Bom Jesus do Cabral</string>
    <string name="confirmar">Presença</string>

    <!--M-->
    <string name="mapas">Mapas</string>
    <!--N-->
    <string name="navegar_destino">NAVEGAR</string>
    <!--P-->
    <string name="presentes">Presentes</string>

    <!--S-->
    <string name="sallon_description">Cerimônia civíl e Recepção dos Convidados</string>
    <string name="sallon">Jockey Club do Paraná - Salão Bento Munhoz</string>

    <!--T-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="imagem">Imagem do Casal</string>
    <string name="key_fazer_cache">cache</string>
    <string name="resumo_app">Aplicativo com a função única e exclusiva de facilitar a realização da cerimônia de casamento do Douglas &amp; Emnnuelly</string>
    <string name="sobre">Sobre</string>
    <string name="casamento_doug"><![CDATA[Casamento Mannu&Doug]]></string>
    <string name="developer">Walicen Dalazuana</string>
    <string name="twitter">\@walidalazuana</string>


</resources>
