<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MapsFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true"
        android:layout_marginBottom="54dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/church"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        android:src="@drawable/chuch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_large"
                        android:text="@string/church"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:text="@string/church_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="#666666" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_navi_church"
                            android:onClick="showRouteChurch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_navigation"
                            android:gravity="center"
                            android:text="@string/navegar_destino"
                            android:theme="@style/Widget.AppCompat.Button"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"/>


                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/jockey"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        android:src="@drawable/jockey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_large"
                        android:text="@string/sallon"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:text="@string/sallon_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="#666666" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_navi_sallon"
                            android:onClick="showRouteSallon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_navigation"
                            android:gravity="center"
                            android:text="@string/navegar_destino"
                            android:theme="@style/Widget.AppCompat.Button"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"/>


                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>

</FrameLayout>